<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Carpool</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start point</string>
    <string name="end">Destination</string>
    <string name="submit">submit</string>
    <string name="title_activity_gmapsactivity">Route Map</string>
    <string name="A">Are you Driver?</string>
    <string name="B">Or Passenger?</string>
    <string name="choose"></string>
    <string name="title_activity_add_route">Route manager</string>
    <string name="title_activity_choose_your_side">Driver/Passenger?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="gmapSend">Send</string>
    <string name="driver">Driver name</string>
    <string name="progress_delete">Deleting Route&#8230;</string>
    <string name="date">Current Date</string>
    <string name="search">Search&#8230;</string>
    <string name="hello_d">Hello Driver</string>
    <string name="hello_p">Hello Passenger</string>
    <string name="dodelete">Do you want to delete this route?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello">Hello </string>
    <string name="your_routes">Your Routes</string>
    <string name="pick_time">Set Time</string>
    <string name="auth">Logging in&#8230;</string>
    <string name="pick_date">Set Date</string>
    <string name="date"></string>
    <string name="textMsg_1">Via Carpool App: Your route </string>
    <string name="textMsg_2">has a new passenger! Passenger name:  </string>
    <string name="textMsg_3"> Username</string>
    <string name="textMsg_4">Via Carpool App: The Driver has accepted Your request on Route </string>
    <string name="progress_2">Retrieving your Routes&#8230;</string>
    <string name="accept">Accept!</string>
    <string name="passengerMarker">Passenger: </string>
    <string name="register">or register</string>
    <string name="reg_btn">Register</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_email">Mail</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_loginuser">Username</string>
    <string name="prompt_username">Username</string>
    <color name="white">#ffffff</color>
    <color name="black">#000000</color>
    <color name="button">#A1C1E6</color>
    <color name="darker">#74AAE8</color>
    <string name="routes_selected">Your Active Routes</string>
    <string name="title_activity_lifts_available">Available routes list</string>


    <string name="title_activity_register">Register</string>
    <string name="hello_world">Hello world!</string>

</resources>
