<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/layoutContainer"
    android:background="@drawable/background" 
    android:orientation="horizontal">
    
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15">
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.7">

        <!-- This is the part that's 70% of the total width. I'm inserting a LinearLayout and buttons.-->   
            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
				
                <TextView
		        android:id="@+id/hello_driver"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:padding="10dp"
		        android:text="@string/hello_d"
		        android:textSize="30sp" />
                
                <AutoCompleteTextView
		        android:id="@+id/start"
		        android:ellipsize="start"
               	android:gravity="center_horizontal"
	            android:background="@color/white"
                	android:layout_marginBottom="10dp"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/start"
		        android:padding="10dp" />

			    <AutoCompleteTextView
			        android:id="@+id/end"
			        android:ellipsize="start"
               		android:gravity="center_horizontal"
	                android:background="@color/white"
                	android:layout_marginBottom="10dp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:hint="@string/end"
			        android:padding="10dp" />
				<LinearLayout
			        android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
                	android:layout_marginBottom="10dp"
			       android:orientation="horizontal">
			    <Button
			        style="?android:attr/borderlessButtonStyle"
			        android:id="@+id/pick_time" 
				    android:layout_width="0dp" 
				    android:layout_weight="1"
				    android:layout_marginRight="5dp" 
	                android:background="@color/white"
				    android:layout_height="wrap_content"
				    android:text="@string/pick_time" 
				    android:onClick="showTimePickerDialog" />
			    <Button 
			        style="?android:attr/borderlessButtonStyle"
			        android:id="@+id/pick_date"
				    android:layout_width="0dp"
				    android:layout_weight="1" 
	                android:background="@color/white"
				    android:layout_height="wrap_content"
				    android:text="@string/pick_date" 
				    android:onClick="showDatePickerDialog" />
			    </LinearLayout>
	            <Button
	                android:id="@+id/submit"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginBottom="10dp"
	                android:layout_gravity="right"
	                android:text="@string/submit" />
	            <TextView
			        android:id="@+id/your_routes"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:text="@string/your_routes"
			        android:textSize="20sp" />
			
			    <ListView 
			    android:id="@+id/your_list"
			    android:layout_gravity="center"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"/>

            </LinearLayout>
        <!-- 70% Width End-->

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15">
    </RelativeLayout>
</LinearLayout>