<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/layoutContainer"
    android:background="@drawable/background" 
    android:orientation="horizontal">
      
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15">
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.7">

        <!-- This is the part that's 70% of the total width. I'm inserting a LinearLayout and buttons.-->   
            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

                <EditText 
              	android:id="@+id/reg_firstname"
                android:background="@color/white"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:hint="@string/prompt_firstname"
                android:singleLine="true"
                android:layout_marginBottom="10dip"/>
          
          <EditText 
              	android:id="@+id/reg_lastname"
                android:background="@color/white"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:hint="@string/prompt_lastname"
                android:singleLine="true"
                android:layout_marginBottom="10dip"/>
          
          <EditText 
              	android:id="@+id/reg_username"
                android:background="@color/white"
                android:layout_width="fill_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:hint="@string/prompt_username"
                android:singleLine="true"
                android:layout_marginBottom="10dip"/>
          <EditText 
              	android:id="@+id/reg_email"
                android:background="@color/white"
                android:padding="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:hint="@string/prompt_email"
    			android:inputType="textEmailAddress"
                android:singleLine="true"
                android:layout_marginBottom="10dip"/>
          <EditText 
              	android:id="@+id/reg_phone"
                android:background="@color/white"
                android:padding="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:hint="@string/prompt_phone"
    			android:inputType="phone"
                android:singleLine="true"
                android:layout_marginBottom="10dip"/>
          <EditText
                android:id="@+id/password"
                android:background="@color/white"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
          
          <Button android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
            	android:text="@string/reg_btn"/>

            </LinearLayout>
        <!-- 70% Width End-->

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15">
    </RelativeLayout>
</LinearLayout>